# TreeConstrPolyMatching

./: .gitignore  CMakeLists.txt  README.md
include/: binary_io.h  cgal_includes.h  command_line_parser.h  graph_computations.h  linear_program.h  localization.h  logger.h  polygon_operations.h  polygon_wh.h  shapefile_io_operations.h  solution.h  threading.h  tree_computations.h
input/demo/: demo_1.dbf  demo_1.shp  demo_1.shx  demo_2.dbf  demo_2.qmd  demo_2.shp  demo_2.shx  demo_merged.dbf  demo_merged.shp  demo_merged.shx
src/: binary_io.cpp  command_line_parser.cpp  graph_computations.cpp  linear_program.cpp  localization.cpp  logger.cpp  main.cpp  polygon_operations.cpp  polygon_wh.cpp  shapefile_io_operations.cpp  solution.cpp  threading.cpp  tree_computations.cpp
